# bookmark-storage-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
accounts/: admin.py  authentication.py  forms.py  manegers.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
bookmark_collections/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py
bookmark_collections/migrations/: 0001_initial.py  0002_alter_collections_title.py  0002_rename_collections_collection.py
bookmark_collections/views/: bm_collection.py  bm_collections.py
bookmarks/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
bookmarks/migrations/: 0001_initial.py
bookmarks/serializers/: data.py  model.py
bookmarks/views/: bookmark.py  bookmarks.py
core/: settings.py  urls.py
enums/: choices.py
og_parser/: headers.py  parser.py
parser/: parser.py  request_utils.py
yasg/: schema.py  urls.py
